app/assets/stylesheets/application.css
:root {
  --main-border: 1px solid var(--bulma-border);
}

html, body {
  height: 100%;
  overflow: hidden;
}

.container > .title {
  margin-top: 1rem;
}

body.side-frame {
  display: flex;
  flex-direction: column;
}

body.side-frame #navigation-bar, body.side-frame #action-bar {
  flex: 0 0 auto;
}

body.side-frame #contents {
  flex: 1 1 auto;
  margin-bottom: 0;
  min-height: 0;
}

#navigation-bar {
  border-bottom: var(--main-border);
}

.navbar-menu.is-active {
  border-top: var(--main-border);
}

.navbar-item.title {
  font-size: inherit;
  line-height: inherit;
  margin: 0;
}

#action-bar {
  border-top: var(--main-border);
}

#action-bar .buttons {
  justify-content: center;
}

#action-bar .buttons .button {
  border: none;
  flex-direction: column;
}

#action-bar .buttons .button .icon {
  margin: 0;
}

#action-bar .buttons .button .text {
  font-size: 0.75rem;
}

.card-header {
  border-bottom: var(--main-border);
}

.card-header-title {
  color: var(--bulma-body-color);
  font-weight: var(--bulma-weight-extrabold);
  padding: 10px 12px;
}

.card-footer.buttons .button {
  border-top-left-radius: 0;
}

.notification {
  margin: 1rem 0 0;
}

.notification .delete {
  right: 0.25rem;
  top: 0.25rem;
}

body.side-frame .notification {
  margin-top: 0;
}

.expenses .expenses-headings, .person-transfer.grid {
  margin-bottom: 0;
}

.expenses {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.expenses .expenses-headings {
  flex: 0 0 auto;
}

.expenses .expenses-content {
  flex: 1 1 auto;
}

.expenses .person-transfer.person-payback {
  background-color: var(--bulma-border);
}

.scroller {
  height: 100%;
  margin: 0;
  overflow-x: hidden;
  overflow-y: scroll;
  padding: 0;
}

@media screen and (max-width: 1023px) {
  body > .container  {
    padding: 0 1rem;
  }

  #side-panel .card {
    display: flex;
    flex-direction: column;
    height: 100%;
    left: 0;
    padding: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 100;
  }

  #side-panel .card .card-header {
    height: 52px;
  }

  #side-panel .card .card-content {
    flex-grow: 1;
  }

  #side-panel .card .card-footer {
    bottom: 0;
    width: 100%;
  }
}

@media screen and (max-width: 768px) {
  #contents {
    display: flex;
    flex-direction: column-reverse;
  }

  #contents #main-panel {
    flex: 0 1 auto;
    min-height: 0;
  }

  .expenses .date {
    background-color: var(--bulma-body-background-color);
    border-top: var(--main-border);
    color: var(--bulma-text-bold);
    font-size: 0.9rem;
    padding: 0.25rem 1rem;
  }

  .person-transfer.grid {
    background-color: var(--bulma-background);
    border-top: var(--main-border);
    color: inherit;
    margin-bottom: 0;
    padding: 0.25rem 0.5rem;
  }
    
  .person-transfer.grid .expense-payee, .person-transfer.grid .expense-dollar-amount-paid {
    color: var(--bulma-text-bold);
  }

  .person-transfer.grid .expense-memo, .person-transfer.grid .person-transfer-dollar-amount {
    font-size: 0.9rem;
  }

  .card-footer.buttons .button {
    border-top-left-radius: 0;
  }
}

@media screen and (min-width: 769px) {
  #action-bar {
    border-bottom: var(--main-border);
    border-top: none;
    order: 1;
  }

  #action-bar .buttons {
    justify-content: start;
  }
  
  #action-bar .buttons .button {
    flex-direction: row;
  }

  #action-bar .buttons .button .icon {
    margin: 0 0.25rem 0 -0.5rem;
  }

  #action-bar .buttons .button .text {
    font-size: 1rem;
  }

  #contents {
    order: 2;
  }

  .expenses {
    border-left: var(--main-border);
  }
    
  .expenses .cell {
    padding: 0.25rem 0.5rem;
  }

  .expenses .expenses-headings, .expenses .person-transfer {
    padding: 0 0.5rem;
  }
   
  .expenses .expenses-headings {
    border-bottom: var(--main-border);
    font-size: 0.8rem;
    text-transform: uppercase;
  }
    
  .expenses .expenses-headings div .cell:nth-last-child(n+2) {
    border-right: var(--main-border);
  }

  .expenses .person-transfer {
    border-bottom: var(--main-border);
    color: var(--bulma-text-bold);
  }
}

